--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
         <init-param>
             <param-name>log4j-init-file</param-name>
-            <param-value>WEB-INF/log4j.xml</param-value>
+            <param-value>/WEB-INF/log4j.xml</param-value>
         </init-param>
 
         <load-on-startup>1</load-on-startup>
