--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <session-config>
         <session-timeout>20</session-timeout>
     </session-config>
-    <servlet>
+    <!--servlet>
         <servlet-name>Log4jinit</servlet-name>
         <servlet-class>lv.tsi.seabattle.controller.Log4jinit</servlet-class>
 
@@ -21,5 +21,5 @@
         </init-param>
 
         <load-on-startup>1</load-on-startup>
-    </servlet>
+    </servlet-->
 </web-app>
